--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
-:root {
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
 #root {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
