--- a/src/components/pages/signup.module.css
+++ b/src/components/pages/signup.module.css
@@ -1,9 +1,9 @@
-body {
+.signup {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
   margin: 0;
   padding: 0;
 }
+
 .container {
   width: 50%;
   margin: auto;
@@ -12,26 +12,37 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 50px;
 }
+
 .formGroup {
   margin-bottom: 15px;
+  text-align: left;
 }
+
 .formGroup label {
   display: block;
   margin-bottom: 5px;
 }
+
 .formGroup input,
 .formGroup select {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
 }
-.formGroup button {
-  padding: 10px 15px;
-  background-color: #007bff;
+
+.button {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px 25px;
+  font-size: 16px;
   color: #fff;
+  background-color: #007bff;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
 }
-.formGroup button:hover {
+
+.button:hover {
   background-color: #0056b3;
 }
