--- a/src/components/pages/landingpage.module.css
+++ b/src/components/pages/landingpage.module.css
@@ -15,6 +15,7 @@
   display: inline-block;
   margin: 10px;
   padding: 15px 25px;
+  width: 150px;
   font-size: 16px;
   color: #fff;
   background-color: #007bff;
