--- a/src/pages/landing.module.css
+++ b/src/pages/landing.module.css
@@ -1,30 +1,153 @@
 .landingPage {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  flex-direction: column;
+
   height: 100vh;
+
+  color: #f0f0f0;
   margin: 0;
   font-family: Arial, sans-serif;
+
+  position: relative;
+  background: linear-gradient(to right, rgb(3, 176, 124), #0caea9);
+
+  cursor: default;
+}
+
+.clinikOS {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  height: 200px;
+  width: 400px;
+
+  padding: 20px;
+  border: 2px solid #f0f0f0;
+  border-radius: 20px;
+
+  position: absolute;
+  top: 3%;
+  left: 3%;
+}
+
+.clinikOS h1 {
+  font-size: 5em;
+  margin-top: 0;
+  margin-bottom: 10px;
+  opacity: 0;
+  animation: fadeInX 1.2s ease 0.7s forwards;
+}
+
+.clinikOS p {
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  animation: fadeIn 1s ease 0.7s forwards;
+}
+
+.welcome {
+  font-size: 2.25em;
+  margin: 0;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  opacity: 0;
+  animation: fadeInY 1.2s ease-in-out 1.5s forwards;
 }
 
 .container {
   text-align: center;
+  border-top-right-radius: 35px;
+  border-top-left-radius: 35px;
+  width: 100%;
+  height: 20%;
+  background: linear-gradient(to bottom, #f0f0f0, #c3c3c3);
+  transition: ease 0.25s;
+}
+
+.welcome:hover ~ .container {
+  height: 30%;
+}
+
+.container:hover {
+  height: 30%;
 }
 
 .button {
-  display: inline-block;
-  margin: 10px;
+  margin: 60px 20px;
   padding: 15px 25px;
   width: 150px;
-  font-size: 16px;
-  color: #fff;
-  background-color: #007bff;
+  font-size: 1.25em;
+  color: #f0f0f0;
+  background-color: #099893;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
-  text-decoration: none;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #f0f0f0;
+  color: #099893;
+  border: 3px solid #099893;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInX {
+  from {
+    opacity: 0;
+    transform: translatex(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInY {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .clinikOS {
+    width: 70%;
+    height: 35%;
+  }
+
+  .clinikOS h1 {
+    font-size: 6em;
+  }
+
+  .clinikOS p {
+    font-size: 2em;
+  }
+
+  .welcome {
+    font-size: 3em;
+  }
+
+  .button {
+    margin: 40px 40px;
+
+    padding: 10px 20px;
+    font-size: 1.7em;
+  }
 }
