--- a/src/pages/signup.module.css
+++ b/src/pages/signup.module.css
@@ -2,15 +2,26 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+  border: 1px solid transparent;
+  background: linear-gradient(to right, rgb(3, 176, 124), #0caea9);
+  color: #f0f0f0;
 }
 
 .container {
   width: 50%;
   margin: auto;
-  background-color: #fff;
+  border: 2px solid #dddddd;
+  border-radius: 10px;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   margin-top: 50px;
+  background-color: transparent;
+}
+
+h1 {
+  margin-bottom: 20px;
+  color: #f0f0f0;
 }
 
 .formGroup {
@@ -20,14 +31,25 @@
 
 .formGroup label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 .formGroup input,
 .formGroup select {
+  outline: none;
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
+  background-color: transparent;
+  border: 2px solid #dddddd;
+  border-radius: 10px;
+  color: #f0f0f0;
+}
+
+.formGroup select option {
+  background-color: #333;
+  color: #f0f0f0;
 }
 
 .button {
@@ -35,14 +57,15 @@
   margin: 10px;
   padding: 10px 25px;
   font-size: 16px;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
+  font-weight: bold;
+  color: #0fb19f;
+  background-color: #f0f0f0;
+  border: 2px solid #f0f0f0;
   border-radius: 5px;
   cursor: pointer;
-  text-decoration: none;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: transparent;
+  color: #f0f0f0;
 }
