--- a/src/pages/landing.module.css
+++ b/src/pages/landing.module.css
@@ -5,9 +5,12 @@
   flex-direction: column;
 
   height: 100vh;
+  box-sizing: border-box;
+  overflow: hidden;
 
   color: #f0f0f0;
   margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
 
   position: relative;
