--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 #root {
+  height: 100%;
+  width: 100%;
   box-sizing: border-box;
   background-color: #f0f0f0;
   color: #000;
