--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -27,6 +27,13 @@
 }
 
 .option_container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.option {
+  padding: 10px;
+  cursor: pointer;
 }
 
 .settings {
