--- a/src/components/upcomingAppointments.module.css
+++ b/src/components/upcomingAppointments.module.css
@@ -1,8 +1,13 @@
 .container {
+  box-sizing: border-box;
   display: flex;
+  width: 800px;
+  height: 350px;
+  border-radius: 30px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 50px;
-  background-color: white;
+  background-color: aliceblue;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
