--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -7,6 +7,15 @@
   cursor: pointer;
 }
 
+.welcome {
+  position: fixed;
+  font-size: 2.5rem;
+  align-self: start;
+  padding: 0 0 0 50px;
+  top: 10px;
+  color: white;
+}
+
 .home {
   font-family: Arial, sans-serif;
   height: 100vh;
@@ -18,4 +27,14 @@
   grid-template-columns: 350px 1fr;
   display: grid;
   text-align: center;
+}
+.content {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  height: 100%;
+  width: 100%;
 }
